--- a/docker/docker-compose.public.yaml
+++ b/docker/docker-compose.public.yaml
@@ -2,10 +2,7 @@
 
 version: "3.8"
 services:
-  nginx-custom:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  ja4-nginx:
     ports:
       - "80:80"
       - "443:443"
