fix nginx patch by specifically references files to compare to upstream

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine
 
 # Define the version as a build argument for easy updates
-ARG VERSION=v0.1.0-alpha
+ARG VERSION=v1.0.1-beta
 ARG NGINX_VERSION=1.25.0
 RUN apk add --no-cache \
     gcc \
@@ -17,21 +17,30 @@ RUN adduser -D dswebuser
 
 WORKDIR /tmp
 
+# INSTALL JA4 module
+RUN wget https://github.com/FoxIO-LLC/ja4-nginx-module/releases/download/${VERSION}/ja4-nginx-module-${VERSION}.tar.gz && \
+    tar -zxvf ja4-nginx-module-${VERSION}.tar.gz
+
 # INSTALL NGINX
 RUN wget https://nginx.org/download/nginx-${NGINX_VERSION}.tar.gz && \
     tar -zxvf nginx-${NGINX_VERSION}.tar.gz
 
+# INSTALL OpenSSL
+RUN wget https://github.com/openssl/openssl/releases/download/openssl-3.2.1/openssl-3.2.1.tar.gz && \
+    tar -zxvf openssl-3.2.1.tar.gz
+
 WORKDIR /tmp/nginx-${NGINX_VERSION}
 
-# JA4 module
-RUN wget https://github.com/FoxIO-LLC/ja4-nginx-module/releases/download/${VERSION}/ja4-nginx-module-${VERSION}.tar.gz && \
-    tar -zxvf ja4-nginx-module-${VERSION}.tar.gz
-
 # patch nginx core
-RUN patch -p1 < ja4-nginx-module-${VERSION}/patches/nginx.patch
+RUN patch -p1 < /tmp/ja4-nginx-module-${VERSION}/patches/nginx.patch
+
+# patch openssl
+WORKDIR /tmp/openssl-3.2.1
+
+RUN patch -p1 < /tmp/ja4-nginx-module-${VERSION}/patches/openssl.patch
 
 # Build Nginx
-RUN ./configure --with-debug --with-compat --add-module=/tmp/nginx-${NGINX_VERSION}/ja4-nginx-module-${VERSION}/src --with-http_ssl_module --prefix=/etc/nginx && \
+RUN ./configure --with-openssl=/tmp/openssl-3.2.1 --with-debug --with-compat --add-module=/tmp/nginx-${NGINX_VERSION}/ja4-nginx-module-${VERSION}/src --with-http_ssl_module --prefix=/etc/nginx && \
     make && \
     make install
 
