initial image release

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine
 
 # Define the version as a build argument for easy updates
-ARG VERSION=v1.0.1-beta
+ARG VERSION=v1.0.2-beta
 ARG NGINX_VERSION=1.25.0
 RUN apk add --no-cache \
     gcc \
@@ -11,7 +11,10 @@ RUN apk add --no-cache \
     pcre-dev \
     zlib-dev \
     wget \
-    patch
+    patch \
+    perl-dev \
+    linux-headers
+
 
 RUN adduser -D dswebuser
 
@@ -29,18 +32,18 @@ RUN wget https://nginx.org/download/nginx-${NGINX_VERSION}.tar.gz && \
 RUN wget https://github.com/openssl/openssl/releases/download/openssl-3.2.1/openssl-3.2.1.tar.gz && \
     tar -zxvf openssl-3.2.1.tar.gz
 
-WORKDIR /tmp/nginx-${NGINX_VERSION}
-
-# patch nginx core
-RUN patch -p1 < /tmp/ja4-nginx-module-${VERSION}/patches/nginx.patch
-
 # patch openssl
 WORKDIR /tmp/openssl-3.2.1
 
 RUN patch -p1 < /tmp/ja4-nginx-module-${VERSION}/patches/openssl.patch
 
+# patch nginx
+WORKDIR /tmp/nginx-${NGINX_VERSION}
+
+RUN patch -p1 < /tmp/ja4-nginx-module-${VERSION}/patches/nginx.patch
+
 # Build Nginx
-RUN ./configure --with-openssl=/tmp/openssl-3.2.1 --with-debug --with-compat --add-module=/tmp/nginx-${NGINX_VERSION}/ja4-nginx-module-${VERSION}/src --with-http_ssl_module --prefix=/etc/nginx && \
+RUN ./configure --with-openssl=/tmp/openssl-3.2.1 --with-debug --with-compat --add-module=/tmp/ja4-nginx-module-${VERSION}/src --with-http_ssl_module --prefix=/etc/nginx && \
     make && \
     make install
 
