--- a/nginx_utils/nginx.conf
+++ b/nginx_utils/nginx.conf
@@ -47,4 +47,14 @@ http {
         }
 
     }
+
+    server {
+        listen 80;
+        server_name localhost;
+        add_header Content-Type text/plain;
+
+        location / {
+            return 200 "ok";
+        }
+    }
 }
