--- a/nginx_utils/nginx.conf
+++ b/nginx_utils/nginx.conf
@@ -1,10 +1,11 @@
 
 worker_processes 1;
 
-error_log logs/error.log debug;
+error_log /etc/nginx/logs/error.log warn;
+pid /etc/nginx/logs/nginx.pid;
 
 events {
-    worker_connections 1024;
+    worker_connections 32;
 }
 
 
