--- a/nginx_utils/nginx.conf
+++ b/nginx_utils/nginx.conf
@@ -30,6 +30,10 @@ http {
         ssl_certificate server.crt;
         ssl_certificate_key server.key;
 
+        # prevent caching issue w/ signature algorithm extension 
+        ssl_session_cache off;
+
+
         location / {
             add_header Content-Type text/plain;
             return 200 "
