ja4one, ignore padding extension

--- a/nginx_utils/nginx.conf
+++ b/nginx_utils/nginx.conf
@@ -39,6 +39,7 @@ http {
             return 200 "
             JA4: $http_ssl_ja4\n
             JA4 String: $http_ssl_ja4_string\n
+            JA4one: $http_ssl_ja4one\n
             JA4S: $http_ssl_ja4s\n
             JA4S String: $http_ssl_ja4s_string\n
             JA4H: $http_ssl_ja4h\n
@@ -48,7 +49,9 @@ http {
             JA4TS: $http_ssl_ja4ts\n
             JA4TS String: $http_ssl_ja4ts_string\n
             JA4X: $http_ssl_ja4x\n
-            JA4L: $http_ssl_ja4l\n";
+            JA4L: $http_ssl_ja4l\n
+            ";
+
         }
 
     }
