--- a/docker/docker-compose.public.yaml
+++ b/docker/docker-compose.public.yaml
@@ -1,7 +1,8 @@
 # this is a reference file for how to use the image hosted on GitHub Container Registry
 services:
   ja4-nginx:
-    image: ghcr.io/foxio-llc/ja4-nginx-module:v1.0.0-beta
+    container_name: ja4-nginx
+    image: ghcr.io/foxio-llc/ja4-nginx-module:v1.2.1-beta
     ports:
       - "80:80"
       - "443:443"
