--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -15,6 +15,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
 
+      - name: Generate self-signed cert
+        run: |
+          mkdir -p nginx_utils
+          mkdir -p nginx_utils/logs
+          openssl req -x509 -nodes -newkey rsa:2048 \
+            -keyout nginx_utils/server.key \
+            -out nginx_utils/server.crt \
+            -days 1 \
+            -subj "/CN=localhost"
+
       - name: Start nginx with Docker Compose
         run: docker compose up --build -d
 
